--- a/vignettes/read_waterdata_functions.Rmd
+++ b/vignettes/read_waterdata_functions.Rmd
@@ -253,6 +253,39 @@ leaflet(data = sites_mn_wi |>
 
 ```
 
+Another use for the general retrievals would be to use a "wildcard" which in CQL2 is the percent sign (%). When CQL sees the percent sign, it ignores any characters after the wildcard. HUCs are a great example of when you might want to use a wildcard. Let's say we want all the sites that fall within the 02070010. In the USGS data base, the hydrologic unit codes might be saved as 02070010, but also could be saved as 020700100350 (or any set of numbers after 02070010). To get all the sites that start with 02070010:
+
+
+```{r}
+# A wildcard in CQL2 is %
+# Here's how to get HUCs that fall within 02070010
+cql_huc_wildcard <- '{
+"op": "like",
+"args": [
+  { "property": "hydrologic_unit_code" },
+  "02070010%"
+]
+}'
+
+what_huc_sites <- read_waterdata(service = "monitoring-locations",
+                                 CQL = cql_huc_wildcard)
+```
+
+```{r}
+what_huc_sites$hydrologic_unit_code <- as.factor(what_huc_sites$hydrologic_unit_code)
+pal <- colorFactor("viridis", what_huc_sites$hydrologic_unit_code)
+
+leaflet(data = what_huc_sites |> 
+                sf::st_transform(crs = leaflet_crs)) |> 
+    addProviderTiles("CartoDB.Positron") |> 
+    addCircleMarkers(popup = ~monitoring_location_name, 
+                     color = ~ pal(hydrologic_unit_code),
+                     radius = 0.1,
+                     opacity = 1) 
+
+```
+
+
 ## Discrete Samples
 
 Discrete USGS water quality can be accessed via the `read_waterdata_samples` function. While this is a new, modern USGS endpoint, it is not served in the same infrastructure as the rest of these new advertised functions. See [Samples Data](articles/samples_data.html)) for information on accessing USGS discrete water quality data.
