--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+dataRetrieval 2.7.20
+===================
+* Added id transformation to read_waterdata to match other functions
+* Cleaned up time arguments in waterdata functions to allow flexible time zones
+
+
 dataRetrieval 2.7.19
 ===================
 * Added read_waterdata_daily, read_waterdata_monitoring_location, read_waterdata_ts_meta to access
