Taking out Hydrologic Unit Codes for now until the limit gets removed OR we can post CQL

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ dataRetrieval 2.7.20
 ===================
 * Added id transformation to read_waterdata to match other functions
 * Cleaned up time arguments in waterdata functions to allow flexible time zones
-* Added read_metadata, read_waterdata_parameter_codes, read_waterdata_hydrologic_unit_codes
+* Added read_metadata, read_waterdata_parameter_codes
 
 dataRetrieval 2.7.19
 ===================
